@@ -1,0 +1,14 @@
+from countershape import Page
+
+pages = [
+    Page("anticache.html", "Anticache"),
+    Page("clientreplay.html", "Client-side replay"),
+    Page("filters.html", "Filter expressions"),
+    Page("setheaders.html", "Set Headers"),
+    Page("serverreplay.html", "Server-side replay"),
+    Page("sticky.html", "Sticky cookies and auth"),
+    Page("proxyauth.html", "Proxy Authentication"),
+    Page("replacements.html", "Replacements"),
+    Page("reverseproxy.html", "Reverse proxy mode"),
+    Page("upstreamcerts.html", "Upstream Certs"),
+]
